fix popup wrapping and mm capitalization

--- a/src/app/components/current-weather-card/current-weather-card.module.css
+++ b/src/app/components/current-weather-card/current-weather-card.module.css
@@ -33,6 +33,7 @@
   color: var(--dark-purple);
   font-weight: 600;
   width: fit-content;
+  white-space: nowrap;
   opacity: 0;
 }
 
