--- a/src/app/components/forecast-card/forecast.module.css
+++ b/src/app/components/forecast-card/forecast.module.css
@@ -42,6 +42,7 @@
   color: var(--dark-purple);
   font-weight: 600;
   width: fit-content;
+  white-space: nowrap;
   opacity: 0;
   text-transform: capitalize;
 }
